<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APlay</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="sort_by_duraition">Duration</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_name">Title</string>
    <string name="sort_by_album">Album</string>
    <string name="perm_denied">Permissions denied</string>
    <string name="failed">Failed</string>
    <string name="all_songs">All songs</string>
    <string name="recent">Recent</string>
    <string name="smart_list">Smart list</string>

    <string name="minute_1">One minute ago</string>
    <string name="minute_5">Five minutes ago</string>
    <string name="minute_10">Ten minutes ago</string>
    <string name="minute_15">Fifteen minutes ago</string>
    <string name="minute_30">Thirty minutes ago</string>
    <string name="hour_1">One hour ago</string>
    <string name="hour_2">Two hours ago</string>
    <string name="hour_3">Three hours ago</string>
    <string name="hour_5">Five hours ago</string>
    <string name="day_1">Yesterday</string>
    <string name="day_2">Two days ago</string>
    <string name="never">A long time ago in a galaxy far, far away...</string>

    <string name="settings_volume">Volume</string>
    <string name="history_cleaned">History was cleaned</string>
    <string name="volume_title">Volume</string>

    <string name="plug_pref">Plug/Unplug reaction</string>
    <string name="plug_pref_sum">Player will stop when you plug or unplug headset</string>

    <string name="enable_notif">Enable notification controller</string>
    <string name="enable_notif_sum">Show notification with music-controll buttons</string>

    <string name="clear_history">Clear history</string>
    <string name="clear_history_sum">Clear all information about listened tracks</string>

    <string name="reverse_sl">Reverse smart-list</string>
    <string name="reverse_sl_sum">Smart-list shows less used tracks</string>

    <string name="data">Data</string>
    <string name="system">System</string>

</resources>
