<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/system">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="plugunplug"
            android:title="@string/plug_pref"
            android:summary="@string/plug_pref_sum"
            android:defaultValue="true" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="notification"
            android:title="@string/enable_notif"
            android:summary="@string/enable_notif_sum"
            android:defaultValue="true" />

    </android.support.v7.preference.PreferenceCategory>


    <android.support.v7.preference.PreferenceCategory
        android:title="@string/data">

        <android.support.v7.preference.Preference
            android:key="clearhistory"
            android:title="@string/clear_history"
            android:summary="@string/clear_history_sum" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="reversesmartlist"
            android:title="@string/reverse_sl"
            android:summary="@string/reverse_sl_sum"
            android:defaultValue="false" />

    </android.support.v7.preference.PreferenceCategory>


</android.support.v7.preference.PreferenceScreen>